--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,6 @@
 # Custom
 main
+tmp
 
 # Created by https://www.toptal.com/developers/gitignore/api/go
 # Edit at https://www.toptal.com/developers/gitignore?templates=go
